# zutai

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Justfile  README.md  flake.nix  one-shot-plan-zutai-packages.md
.cargo/: config.toml
crates/browser/kernel/: Cargo.toml
crates/browser/kernel/src/: bundle.rs  css.rs  decode.rs  diff.rs  document.rs  dom.rs  lib.rs  render.rs
crates/browser/kernel/tests/: browser_hydration.rs  browser_program.rs  events.rs  website.rs
crates/browser/kernel/tests/fixture/: mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  diagnostics.rs  lsp.rs  main.rs
crates/cli/src/commands/: compile.rs  eval.rs  mod.rs  model.rs  package.rs  reflect.rs  tests.rs  toolchain.rs  web.rs
crates/cli/src/lsp/: analysis.rs  mod.rs  protocol.rs  requests.rs
crates/cli/src/lsp/tests/: mod.rs  package.rs
crates/cli/tests/: cli.rs
crates/general/anf/: Cargo.toml
crates/general/anf/src/: lib.rs  lower.rs  scc.rs  tests.rs
crates/general/dataflow/: Cargo.toml
crates/general/dataflow/src/: lib.rs  lower.rs  tests.rs  validate.rs
crates/general/dataflow/src/lower/: expr.rs  mod.rs  pat.rs  types.rs
crates/general/dataflow/src/validate/: compat.rs  mod.rs  refs.rs  walk.rs
crates/general/eval/: Cargo.toml
crates/general/eval/src/: analysis_eval.rs  env.rs  error.rs  errors.rs  eval.rs  eval_tlc.rs  force.rs  gate.rs  import.rs  lib.rs  posit.rs  session.rs  tests.rs  thunk.rs  tlc_entry.rs  value.rs
crates/general/eval/src/eval/: apply.rs  binary.rs  dispatch.rs  expr.rs  mod.rs  ops.rs  reflection.rs  top_env.rs  type_key.rs
crates/general/eval/src/eval_tlc/: aggregate.rs  builtin.rs  effects.rs  expr.rs  force.rs  mod.rs  pattern.rs  top_env.rs  type_meta.rs
crates/general/eval/src/tests/: basic.rs  diagnostics_effects.rs  display_runtime.rs  functions_patterns.rs  imports.rs  json.rs  mod.rs  prelude.rs  session.rs  witnesses.rs
crates/general/eval/tests/: differential.rs  language_spec.rs  v0_spec.rs
crates/general/model/: Cargo.toml
crates/general/model/src/: decode.rs  fingerprint.rs  lib.rs  search.rs  tests.rs
crates/general/runtime/: Cargo.toml
crates/general/runtime/src/: arena.rs  host.rs  lib.rs  numeric.rs  show.rs  tests.rs  text.rs  value.rs
crates/general/runtime/tests/: gc_inprocess.rs  heap_cap.rs  heap_stats.rs
crates/general/semantic/: Cargo.toml
crates/general/semantic/src/: ast_ext.rs  cache.rs  context.rs  elab.rs  import.rs  lib.rs  package.rs  pass.rs  reflect_detect.rs  resolution.rs  scope.rs  stdlib.rs  ty.rs
crates/general/semantic/src/import/: diagnostics.rs  imported_type.rs  mod.rs  resolve.rs
crates/general/semantic/src/passes/: exhaustiveness.rs  mod.rs  name_resolution.rs  type_check.rs
crates/general/semantic/src/tests/: imports_backend.rs  mod.rs
crates/general/semantic/tests/: acceptance.rs  elab.rs  fixtures.rs
crates/general/ssa/: Cargo.toml
crates/general/ssa/src/: lib.rs  lower.rs  tco.rs  tests.rs  uncurry.rs
crates/general/ssa/src/lower/: expr.rs  freevars.rs  match_.rs  mod.rs
crates/general/syntax/: Cargo.toml
crates/general/syntax/src/: ast.rs  diagnostic.rs  display.rs  error.rs  format.rs  ident.rs  lib.rs  line_index.rs  numlit.rs  posit.rs  span.rs  syntax.rs  syntax_kind.rs  tests.rs  token_set.rs  validation.rs
crates/general/syntax/src/ast/: docs.rs  mod.rs  nodes.rs  operators.rs  tokens.rs
crates/general/syntax/src/diag/: mod.rs  render.rs
crates/general/syntax/src/lexer/: classify.rs  cursor.rs  mod.rs  scalars.rs
crates/general/syntax/src/parser/: decl.rs  diagnostics.rs  event.rs  expr.rs  input.rs  lex.rs  mod.rs  pattern.rs  type_expr.rs
crates/general/syntax/src/parser/expr/: atom.rs  mod.rs
crates/general/syntax/src/parser/grammar/: decls.rs  exprs.rs  mod.rs  patterns.rs  primary.rs  types.rs
crates/general/syntax/src/tests/: constraints.rs  display.rs  expr.rs  fixtures_and_diagnostics.rs  mod.rs  stable_syntax.rs  types_and_decls.rs  universe_levels.rs  v1_and_lexer.rs
crates/general/syntax/tests/: acceptance.rs  format_corpus.rs
crates/general/tlc/: Cargo.toml
crates/general/tlc/src/: entry.rs  erase.rs  ir.rs  lib.rs  monomorphize.rs  normalize.rs  tests.rs
crates/general/tlc/src/lower/: decl.rs  derive.rs  effects.rs  expr.rs  mod.rs  thir_query.rs  types.rs  witness.rs  witness_resolve.rs
crates/general/tlc/src/lower/derive/: from_data.rs  mod.rs  ord.rs  show.rs  to_data.rs  validation.rs
crates/general/tlc/src/lower/effects/: cps.rs  eligible.rs  finally.rs  inline.rs  mod.rs  reify.rs  rewrite.rs
crates/general/tlc/src/lower/effects/reify/: analysis.rs  construct.rs  mod.rs
crates/general/tlc/src/lower/expr/: callee.rs  compile_time.rs  mod.rs  overlay.rs
crates/general/tlc/src/normalize/: equal.rs  mod.rs  reduce.rs  subst.rs
crates/general/tlc/src/tests/: lower.rs  mod.rs  normalize.rs  patterns.rs  phase0.rs  phase1.rs  phase2.rs  phase3.rs  phase4.rs  phase5.rs  types_equal.rs
crates/immediate/core/: Cargo.toml
crates/immediate/core/src/: lib.rs
crates/immediate/simd/: Cargo.toml
crates/immediate/simd/benches/: immediate_parse.rs
crates/immediate/simd/src/: charclass.rs  error.rs  lib.rs  parser.rs  scanner.rs  string_scan.rs  tests.rs
crates/immediate/simd/src/scanner/: avx2.rs  mod.rs  neon.rs  scalar.rs  sse2.rs
crates/immediate/types/: Cargo.toml
crates/immediate/types/src/: ast.rs  display.rs  lib.rs
crates/package/: Cargo.toml
crates/package/src/: acquire.rs  lib.rs
crates/package/src/acquire/: git.rs  lock.rs  mod.rs  tests.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs  main.rs
crates/web/tests/: cli.rs
docs/: ARCHIVED.md  PROGRESS.md  README.md  TBD.md  anf.md  dataflow-core.md  language-manual.md  runtime-abi.md  tlc-core.md  v0-implementation-roadmap.md
examples/: README.md  canary_forecast.zt  deploy_readiness.zt  deploy_readiness.zti  echo_http.zt  from_data_runtime.zt  from_data_runtime.zti  host_capabilities.zt  host_capabilities_mock.zt  host_stream_read.zt  net_echo.zt  service_health.zt  service_health.zti  stdlib_browser.zt  (+8 more)
(+474 files in other folders)
