[workspace]
members = [
  "crates/cli",
  "crates/general/syntax",
  "crates/general/semantic",
  "crates/immediate/core",
  "crates/immediate/simd",
  "crates/immediate/syntax",
  "crates/immediate/types",
]
default-members = ["crates/cli"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
