[workspace]
members = [
  "crates/browser/kernel",
  "crates/cli",
  "crates/web",
  "crates/package",
  "crates/general/anf",
  "crates/general/codegen",
  "crates/general/dataflow",
  "crates/general/eval",
  "crates/general/hir",
  "crates/general/semantic",
  "crates/general/model",
  "crates/general/runtime",
  "crates/general/ssa",
  "crates/general/syntax",
  "crates/general/tlc",
  "crates/general/thir",
  "crates/immediate/core",
  "crates/immediate/simd",
  "crates/immediate/syntax",
  "crates/immediate/types",
]
default-members = ["crates/cli"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[profile.web]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
