[package]
name = "zutai-cli"
edition.workspace = true
version.workspace = true

[dependencies]
miette = { version = "7.6.0", features = ["fancy"] }
clap = { version = "4", features = ["derive"] }
rustyline = "15"
thiserror = "2.0.18"
rustc-hash = "2.0.0"
libc = "0.2"
notify = "8"
serde_json = "1"
sha2 = "0.10"
tiny_http = "0.12"
zutai-anf = { path = "../general/anf" }
zutai-browser = { path = "../browser/kernel" }
zutai-codegen = { path = "../general/codegen" }
zutai-dataflow = { path = "../general/dataflow" }
zutai-eval = { path = "../general/eval" }
zutai-hir = { path = "../general/hir" }
zutai-im = { path = "../immediate/core" }
zutai-semantic = { path = "../general/semantic" }
zutai-ssa = { path = "../general/ssa" }
zutai-syntax = { path = "../general/syntax" }
zutai-thir = { path = "../general/thir" }
zutai-tlc = { path = "../general/tlc" }
zutai-types = { path = "../immediate/types" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
