[package]
name = "zutai-cli"
edition.workspace = true
version.workspace = true

[dependencies]
miette = { version = "7.6.0", features = ["fancy"] }
clap = { version = "4", features = ["derive", "env"] }
rustyline = "15"
thiserror = "2.0.18"
rustc-hash = "2.0.0"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zutai-anf = { path = "../general/anf" }
zutai-codegen = { path = "../general/codegen" }
zutai-dataflow = { path = "../general/dataflow" }
zutai-eval = { path = "../general/eval" }
zutai-hir = { path = "../general/hir" }
zutai-im = { path = "../immediate/core" }
zutai-semantic = { path = "../general/semantic" }
zutai-rt = { path = "../general/runtime" }
zutai-package = { path = "../package" }
zutai-ssa = { path = "../general/ssa" }
zutai-syntax = { path = "../general/syntax" }
zutai-thir = { path = "../general/thir" }
zutai-tlc = { path = "../general/tlc" }
zutai-types = { path = "../immediate/types" }
zutai-web = { path = "../web" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
