[package]
name = "zutai-package"
description = "Portable package manifests, lock graphs, and native locked Git acquisition for Zutai."
edition.workspace = true
version.workspace = true

[dependencies]
pathdiff = "0.2"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
url = "2"
zutai-im = { path = "../immediate/core" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fs2 = "0.4"
