[package]
name = "zutai-web"
edition.workspace = true
version.workspace = true
description = "Build and serve Zutai browser applications"

[dependencies]
clap = { version = "4", features = ["derive"] }
notify = "8"
serde_json = "1"
sha2 = "0.10"
tiny_http = "0.12"
zutai-browser = { path = "../browser/kernel" }
zutai-eval = { path = "../general/eval" }
zutai-semantic = { path = "../general/semantic" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
