[package]
name = "zutai-browser"
edition.workspace = true
version.workspace = true
description = "Zutai browser kernel, prerenderer, and WebAssembly runtime"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
zutai-eval = { path = "../../general/eval", default-features = false }
zutai-semantic = { path = "../../general/semantic" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "=0.3.98"
wasm-bindgen = "=0.2.121"
web-sys = { version = "=0.3.98", features = [
  "console",
  "Attr",
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "HtmlBodyElement",
  "HtmlCollection",
  "HtmlElement",
  "HtmlHeadElement",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "NamedNodeMap",
  "Node",
  "NodeList",
  "Text",
  "Window",
] }
