[package]
name = "zutai-anf"
description = "Administrative Normal Form lowering from Dataflow Core for Zutai."
edition.workspace = true
version.workspace = true

[dependencies]
zutai-dataflow = { path = "../dataflow" }
rustc-hash = "2.0.0"

[dev-dependencies]
zutai-syntax = { path = "../syntax" }
zutai-hir = { path = "../hir" }
zutai-thir = { path = "../thir" }
zutai-tlc = { path = "../tlc" }
