[package]
name = "zutai-dataflow"
description = "Dataflow Core IR and TLC→DC lowering pass for Zutai."
edition.workspace = true
version.workspace = true

[dependencies]
la-arena = "0.3"
indexmap = "2"
zutai-hir = { path = "../hir" }
zutai-syntax = { path = "../syntax" }
zutai-tlc = { path = "../tlc" }

[dev-dependencies]
zutai-thir = { path = "../thir" }
