[package]
name = "zutai-eval"
description = "Interim THIR reference interpreter for Zutai general mode (.zt)."
edition.workspace = true
version.workspace = true

[dependencies]
thiserror = "2"
zutai-thir = { path = "../thir" }
zutai-hir = { path = "../hir" }
zutai-syntax = { path = "../syntax" }
zutai-semantic = { path = "../semantic" }
zutai-im = { path = "../../immediate/core" }
