[package]
name = "zutai-eval"
description = "TLC-first reference evaluator and THIR regression oracle for Zutai general mode (.zt)."
edition.workspace = true
version.workspace = true

[dependencies]
thiserror = "2"
zutai-thir = { path = "../thir" }
zutai-hir = { path = "../hir" }
zutai-syntax = { path = "../syntax" }
zutai-semantic = { path = "../semantic" }
zutai-im = { path = "../../immediate/core" }
zutai-tlc = { path = "../tlc" }
