[package]
name = "zutai-eval"
description = "TLC-first reference evaluator and THIR regression oracle for Zutai general mode (.zt)."
edition.workspace = true
version.workspace = true

[features]
default = ["native-host"]
native-host = ["dep:parking_lot"]

[dependencies]
thiserror = "2"
zutai-thir = { path = "../thir" }
zutai-hir = { path = "../hir" }
zutai-syntax = { path = "../syntax" }
zutai-semantic = { path = "../semantic" }
zutai-im = { path = "../../immediate/core" }
zutai-tlc = { path = "../tlc" }
fast-posit = "0.2.0"
rustc-hash = "2.0.0"
smallvec = "1"
serde_json = "1"
parking_lot = { version = "0.12", optional = true }
