[package]
name = "zutai-semantic"
description = "Semantic facade, import/module analysis, and staged pipeline for Zutai general mode (.zt)."
edition.workspace = true
version.workspace = true

[dependencies]
zutai-hir = { path = "../hir" }
zutai-syntax = { path = "../syntax" }
zutai-thir = { path = "../thir" }
zutai-tlc = { path = "../tlc" }
zutai-im = { path = "../../immediate/core" }
rustc-hash = "2.0.0"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
