[package]
name = "zutai-syntax"
description = "Parser and AST definitions for Zutai general mode (.zt)."
edition.workspace = true
version.workspace = true

[features]
render = ["dep:ariadne"]

[dependencies]
rowan = "0.16"
text-size = "1.1"
rustc-hash = "2.0.0"
ariadne = { version = "0.5", optional = true }

[dev-dependencies]
expect-test = "1.5"
