[package]
name = "zutai-syntax"
description = "Parser and AST definitions for Zutai general mode (.zt)."
edition.workspace = true
version.workspace = true

[dependencies]
rowan = "0.16.1"
winnow = "1.0.3"
fast-posit = "0.2.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
rustc-hash = "2.0.0"
unicode-ident = "1"

[dev-dependencies]
zutai-im-syntax = { path = "../../immediate/syntax" }
