[package]
name = "zutai-im-simd"
description = "The SIMD-accelerated parser for Zutai immediate mode."
edition.workspace = true
version.workspace = true

[dependencies]
thiserror = "2"
rustc-hash = "2.0.0"
zutai-types = { path = "../types" }

[dev-dependencies]
criterion = "0.5.1"
zutai-im-syntax = { path = "../syntax" }

[[bench]]
name = "immediate_parse"
harness = false
