[package]
name = "zutai-types"
description = "Shared AST types for Zutai immediate mode (`.zti`)."
edition.workspace = true
version.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]

[dev-dependencies]
serde_json = "1"
